--- a/deployment-guides/modules/openshift/pages/1_2_Run_Installer.adoc
+++ b/deployment-guides/modules/openshift/pages/1_2_Run_Installer.adoc
@@ -12,7 +12,6 @@ From the root of the sdp-helm-chart directory, run the command
 Supply a GitHub username and password (or access token) when prompted.
 
 [IMPORTANT]
-.Important
 
 This GitHub login must be for the public GitHub site, and not a GitHub
 Enterprise server
@@ -41,14 +40,14 @@ you opted to install.
 After a few minutes, Jenkins should finish setting up. On the overview
 page for the "sdp" project you should see all blue rings showing all of
 the pods are running successfully. When you click on the Jenkins link -
-it'll be something like _http://jenkins.app.ocp.example.com_ - you
+it'll be something like _\http://jenkins.app.ocp.example.com_ - you
 should be redirected to an OpenShift login page. Use your OpenShift
 credentials to log in. If you're prompted to allow the _jenkins_ Service
 Account to access your account, click "Allow selected permissions" to
 proceed. You should see a fresh Jenkins ready for new jobs.
 
 If you installed SonarQube, you should be able to click on the its link
-- it'll be something like _http://sonarqube.apps.ocp-dev.microcaas.net_
+- it'll be something like _\http://sonarqube.apps.ocp-dev.microcaas.net_
 - and go to the SonarQube homepage. Log in with the username and
 password "admin" and optionally skip the tutorial. You should see an
 empty SonarQube ready to analyze projects.
