--- a/deployment-guides/modules/openshift/pages/3_2_Helm_Chart_Repo.adoc
+++ b/deployment-guides/modules/openshift/pages/3_2_Helm_Chart_Repo.adoc
@@ -6,15 +6,15 @@ To achieve disaster recovery, auditability, rollbacks, and
 infrastructure as code, the OpenShift library deploys applications using
 Helm from a chart stored in a GitHub repository.
 
-is a tool for templating and managing Kubernetes configuration files
+link:https://helm.sh/[Helm] is a tool for templating and managing Kubernetes configuration files
 and, by extension, OpenShift configuration files. Any element in
 OpenShift can be expressed as as yaml or JSON. Helm lets you take that
 yaml and organize it, turn them into a template, and, through tiller,
 use them to deploy to your cluster.
 
-This Helm chart repository is what the will use to deploy your
+This Helm chart repository is what the link:/sdp-docs/pages/libraries/openshift/README.html[OpenShift SDP library] will use to deploy your
 application to OpenShift. In it, you should create a Helm chart that
-defines the various , , , and other objects your application needs to
+defines the various link:https://docs.openshift.com/container-platform/3.11/dev_guide/deployments/how_deployments_work.html[DeploymentConfigs], link:https://docs.openshift.com/container-platform/3.11/architecture/core_concepts/pods_and_services.html#services[Services], link:https://docs.openshift.com/container-platform/3.11/dev_guide/routes.html[Routes], and other objects your application needs to
 function.
 
 === Create a Repository
@@ -51,7 +51,7 @@ need them.
 We want to keep those files, but provide our own content.
 . Update _Chart.yaml_ to properly describe your new chart.
 
-For more information on Helm charts, check out the .
+For more information on Helm charts, check out the link:[Helm documentation].
 
 === SDP Helm Conventions
 
@@ -72,7 +72,6 @@ image_shas:
 ----
 
 [WARNING]
-.Warning
 Because YAML key's cannot contain hyphens, the openshift converts them
 to underscores and expects that value under image_shas
 
@@ -88,7 +87,7 @@ Helm chart to reflect how you wish to deploy your app.
 
 === Information on Writing Templates
 
-The Helm documentation on writing and is a good place to start learning
+The Helm documentation on writing link:https://docs.helm.sh/developing_charts/[charts] and link:https://docs.helm.sh/chart_template_guide/[templates] is a good place to start learning
 how to create your helm chart. There are a few additional tips that are
 useful for writing charts and templates for OpenShift.
 
@@ -108,7 +107,7 @@ $ oc get all -o yaml
 The second useful tip, which mostly applies if you are copying YAML
 files from OpenShift, is that the `apiVersion` field for
 OpenShift-exclusive object types need to be modified for Helm to process
-the template correctly. Below is a table from an mapping the object
+the template correctly. Below is a table from an link:https://blog.openshift.com/getting-started-helm-openshift/[OpenShift blog post] mapping the object
 types, `Kind`, to the appropriate `apiVersion`.
 
 [cols=",",options="header",]
@@ -135,7 +134,7 @@ at least three things: a DeploymentConfig, a Service, and a Route. The
 DeploymentConfig manages creating and running the container, the Service
 makes it possible to connect to that container within the cluster, and
 the Route exposes that service so it can be connected to from outside
-the cluster. You can see example templates for each of these in the
+the cluster. You can see example templates for each of these in the link:https://github.com/boozallen/sdp-helm-chart"[sdp-helm-chart]
 repository, which is itself a Helm chart.
 
 === Add The Values Files
@@ -147,9 +146,8 @@ substitute _<APP_ENV>_ with the "short_name" of the application
 environment. For example, if you created a _dev_ and _prod_ environment,
 you might create those files with the command:
 
-[source,cp values.yaml values.dev.yaml
-cp values.yaml values.prod.yaml]
 ----
+cp values.yaml values.prod.yaml]
 ----
 
 The purpose of these separate files is so that you can provide separate
@@ -163,8 +161,8 @@ environment-specifc variables.
 
 === Updating the Pipeline Configuration
 
-If you recall from earlier in this guide, in the page on the , there
-were some settings for the that may not have been clear before this
+If you recall from earlier in this guide, in the page on the link:/sdp-docs/pages/deployment-guides/openshift/2_2_Pipeline_Config.html[Pipeline Configuration Repository], there
+were some settings for the link:/sdp-docs/pages/libraries/openshift/README.html[OpenShift SDP library] that may not have been clear before this
 point in the guide.
 
 [source,groovy]
@@ -214,7 +212,7 @@ In order to enable automatic deployments to OpenShift, this guide
 covered the following:
 
 [arabic]
-. Setting up Application Environments on OpenShift using
+. Setting up Application Environments on OpenShift using link:https://github.com/boozallen/sdp-helm-chart/blob/master/resources/helm/provision_app_envs.sh[provision_app_envs.sh]
 . Creating a Helm chart repository that defines how to deploy your
 application
 . Modifying Jenkins and the pipeline config file to use the helm chart
@@ -222,7 +220,7 @@ repository and the provisioned application environments
 
 === Next Steps
 
-* More on Helm multitenancy in OpenShift
-* More on the OpenShift SDP library
-* More on writing Helm charts
-* example Helm chart
+* link:/sdp-docs/pages/how-to/helm-multitenancy.html[More on Helm multitenancy in OpenShift]
+* link:/sdp-docs/pages/libraries/openshift/README.html[More on the OpenShift SDP library]
+* link:https://docs.helm.sh/developing_charts/[More on writing Helm charts]
+* link:https://docs.helm.sh/chart_template_guide/[example Helm chart]
