--- a/deployment-guides/modules/openshift/pages/index.adoc
+++ b/deployment-guides/modules/openshift/pages/index.adoc
@@ -11,10 +11,16 @@ automatically deployed to using the "OpenShift" SDP Library. This
 includes a Tiller server for deployments via Helm, as well as separate
 application environments such as "Dev" and "Test"
 
-1_0_Deploy_Tools_Overview 1_1_Prepare_To_Install 1_2_Run_Installer
-2_0_Pipeline_Config_Overview 2_1_Pipeline_Planning 2_2_Pipeline_Config
-3_0_Application_Environment_Overview 3_1_Application_Environments
-3_2_Helm_Chart_Repo
+
+link:1_0_Deploy_Tools_Overview.adoc[Section 1 - Deploying the DevOps Tools]
+link:1_1_Prepare_To_Install.adoc[Section 1.1 - Preparing to Run the Installer] 
+link:1_2_Run_Installer.adoc[Section 1.2 - Running the Installer Script]
+link:2_0_Pipeline_Config_Overview.adoc[Section 2 - Setting up a Pipeline] 
+link:2_1_Pipeline_Planning.adoc[Section 2.1 - Pipeline Planning]
+link:2_2_Pipeline_Config.adoc[Section 2.2 - Creating the Pipeline Configuration File]
+link:3_0_Application_Environment_Overview.adoc[Section 3 - Setting up the Application Environments]
+link:3_1_Application_Environments.adoc[Section 3.1 - Creating the Application Environments]
+link:3_2_Helm_Chart_Repo.adoc[Setting up the Helm Chart Repository]
 
 *_Click on the Next button to continue on to the Section 1 of this
 guide_
