--- a/learning-labs/modules/try-it-out/pages/troubleshooting.adoc
+++ b/learning-labs/modules/try-it-out/pages/troubleshooting.adoc
@@ -12,7 +12,7 @@ potential solutions to get past them.
 `docker-compose -f ./try-it-out/docker-compose.yaml up --build -d --scale sonar-scanner=0`,
 I get the following error:
 
-____
+
 [source,bash]
 ----
 No such file or directory: '././try-it-out/docker-compose.yaml
@@ -24,64 +24,61 @@ current directory in your terminal, run `pwd` and make sure that the
 directory path ends with *sdp-labs*. If it doesn't, in your terminal,
 navigate to the *sdp-labs* directory and ensure that the path does end
 with *sdp-labs*.
-____
+
 
 *Problem 2*: When I run the command
 `docker-compose -f ./try-it-out/docker-compose.yaml up --build -d --scale sonar-scanner=0`,
 some Docker containers don't get started.
 
-____
+
 
 *Solution 1*: It's very likely that you ran out of memory within your
 Docker engine due to all the Docker images you have within it. We
 suggest running the following command to get rid of all your unneeded
 Docker containers and Docker images.
 
-____
+
 [source,bash]
 ----
 docker images --no-trunc | grep '<none>' | awk '{ print $3 }' | xargs docker rmi
 ----
 
 [NOTE]
-.Note
+
 ====
 You cannot undo the effects of this command once it is done.
 ====
-____
+
 
 *Solution 2*: Make sure that you have enough resources allocated to your
 Docker engine. Follow the sections under the Advanced section to change
 the resources you allocate to Docker depending on if you're using
 https://docs.docker.com/docker-for-windows/#advanced[Docker for Windows]
-or https://docs.docker.com/docker-for-mac/#preferences-menu[Docker for
-Mac].
+or https://docs.docker.com/docker-for-mac/#preferences-menu[Docker for Mac].
 
-____
---
+
+
 This lab requires the following resources allocated to Docker to ensure
 that all services run smoothly:
 
-____
+
 * 2CPUs
 * 3.0GIB Memory
 * 1.0GIB Swap
-____
 
---
-____
+
+
+
 
 *Debugging Tip*: If the above solutions don't work when you run the
 `docker-compose up` command again, run the following command which will
 show the logs and hopefully provide some insight on why it's not working
 as expected:
 
-____
+
 [source,bash]
 ----
 docker-compose -f ./try-it-out/docker-compose.yaml up --build --scale sonar-scanner=0
 ----
-____
 
 
-____
